chainsaw/gateway-api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-test
  labels:
    app: gateway-api-test
spec:
  selector:
    app: gateway-api-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
