chainsaw/gateway-api/manifests/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-api-test
spec:
  hostnames:
    - ($ingress_host_name)
  parentRefs:
    - name: ($values.gatewayApiTest.gatewayName)
      namespace: ($values.gatewayApiTest.gatewayNamespace)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: gateway-api-test
          port: 8080
